# finite-state-machine

./: CMakeLists.txt  README.md
data/: invalido.txt  text.txt  valido.txt
include/: main.hpp  parser.hpp  reading.hpp  tokenizer.hpp
src/: main.cpp  parser.cpp  reading.cpp  tokenizer.cpp
